# bampy

./: .gitignore  README.md  pyproject.toml
docs/: agent-session.md  agent.md  ai-layer.md  compaction.md  custom-provider.md  extensions.md  getting-started.md  providers.md  session.md  skills.md  tools.md
src/bampy/: __init__.py
src/bampy/agent/: __init__.py  agent.py  cancellation.py  loop.py  messages.py  types.py
src/bampy/ai/: __init__.py  api_registry.py  models.py  provider.py  stream.py  types.py  validation.py
src/bampy/ai/providers/: __init__.py  _cancellation.py  _transform.py  anthropic.py  gemini.py  ollama.py  openai.py  registry.py
src/bampy/app/: __init__.py  compaction.py  extension.py  loader.py  messages.py  runtime.py  session.py  skills.py  system_prompt.py
src/bampy/app/tools/: __init__.py  base.py  bash.py  edit.py  file_mutation_queue.py  find.py  grep.py  ls.py  patch.py  path_utils.py  read.py  truncate.py  write.py
tests/test_agent/: test_agent.py  test_loop.py
tests/test_ai/: test_anthropic.py  test_gemini.py  test_models.py  test_ollama.py  test_openai.py  test_provider.py  test_stream.py  test_transform.py  test_types.py  test_validation.py
tests/test_app/: test_builtin_tools.py  test_compaction.py  test_extension.py  test_loader.py  test_messages.py  test_runtime.py  test_runtime_live.py  test_session.py  test_skills.py  test_system_prompt.py  test_tools.py
